<resources>
    <string name="app_name">Music Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="size">Size</string>
</resources>