<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sortBy"
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/byName"
                android:title="@string/name"
                app:showAsAction="never" />
            <item
                android:id="@+id/byDate"
                android:title="@string/date"
                app:showAsAction="never" />
            <item
                android:id="@+id/bySize"
                android:title="@string/size"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>